--- a/source/Kraken.Net/Kraken.Net.nuspec
+++ b/source/Kraken.Net/Kraken.Net.nuspec
@@ -4,8 +4,9 @@
         <id>$id$</id>
         <version>$version$</version>
         <title>$title$</title>
+		<description>$description$</description>
         <authors>neutmute</authors>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>https://github.com/neutmute/kraken.framework</description>
+        <projectUrl>https://github.com/neutmute/kraken.framework</projectUrl>
 	</metadata>
 </package>
