--- a/source/Kraken.Core/Kraken.Core.nuspec
+++ b/source/Kraken.Core/Kraken.Core.nuspec
@@ -7,7 +7,7 @@
 		<description>$description$</description>
         <authors>neutmute</authors>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <projectUrl>https://github.com/neutmute/kraken.framework</projectUrl>
+        <projectUrl>https://github.com/neutmute/kraken.utilities</projectUrl>
 		
 	</metadata>
 </package>
