--- a/source/Kraken.NLog/Kraken.NLog.nuspec
+++ b/source/Kraken.NLog/Kraken.NLog.nuspec
@@ -7,6 +7,6 @@
 		<description>$description$</description>
         <authors>neutmute</authors>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <projectUrl>https://github.com/neutmute/kraken.framework</projectUrl>
+        <projectUrl>https://github.com/neutmute/kraken.utilities</projectUrl>
 	</metadata>
 </package>
