--- a/source/Kraken.Tests.NUnit/packages.config
+++ b/source/Kraken.Tests.NUnit/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.3.0" targetFramework="net40" />
-  <package id="Common.Logging" version="2.1.2" targetFramework="net40" />
+  <package id="Common.Logging" version="2.2.0" targetFramework="net40" />
+  <package id="Common.Logging.Core" version="2.2.0" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
 </packages>
