--- a/source/_Tests/Kraken.Core.Tests/packages.config
+++ b/source/_Tests/Kraken.Core.Tests/packages.config
@@ -3,4 +3,5 @@
   <package id="Autofac" version="3.3.0" targetFramework="net40" />
   <package id="Common.Logging" version="2.3.1" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
+  <package id="NUnit.Runners" version="2.6.4" targetFramework="net40" />
 </packages>
