--- a/source/_Tests/Kraken.Core.Tests/Kraken.Core.Tests.csproj
+++ b/source/_Tests/Kraken.Core.Tests/Kraken.Core.Tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Core\Converters\ObjectDumpFixture.cs" />
     <Compile Include="Core\ExecutionEnvironmentFixture.cs" />
     <Compile Include="Core\Extensions\EnumerationFixture.cs" />
+    <Compile Include="Core\Extensions\StringExtensions.cs" />
     <Compile Include="Core\Extensions\StringExtensionsFixture.cs" />
     <Compile Include="Core\Extensions\TimeSpanExtensionsFixture.cs" />
     <Compile Include="Core\Instrumentation\PerformanceMonitorFixture.cs" />
