--- a/source/_Tests/Kraken.Core.Windows.Tests/Kraken.Core.Windows.Tests.csproj
+++ b/source/_Tests/Kraken.Core.Windows.Tests/Kraken.Core.Windows.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8224724D-FAB3-4050-820B-24F29FAB29FD}</ProjectGuid>
+    <ProjectGuid>{978F57CA-0230-4D07-89B8-667AABC1E6F9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Kraken.Core.Windows</RootNamespace>
-    <AssemblyName>Kraken.Core.Windows</AssemblyName>
+    <RootNamespace>Kraken.Core.Windows.Tests</RootNamespace>
+    <AssemblyName>Kraken.Core.Windows.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,14 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Common.Logging, Version=2.3.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Common.Logging.2.3.1\lib\net40\Common.Logging.dll</HintPath>
+    <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,23 +44,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Caching\BaseMemoryCache.cs" />
-    <Compile Include="Processes\KrakenProcess.cs" />
-    <Compile Include="Processes\NDesk.Options.cs" />
-    <Compile Include="Processes\WindowsExplorerProcess.cs" />
-    <Compile Include="Processes\WinTailProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Threading\TryWithTimeout.cs" />
-    <Compile Include="Win32\UacHelper.cs" />
+    <Compile Include="Threading\TryWithTimeoutFixture.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Kraken.Core.Windows\Kraken.Core.Windows.csproj">
+      <Project>{8224724d-fab3-4050-820b-24f29fab29fd}</Project>
+      <Name>Kraken.Core.Windows</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Kraken.Tests.NUnit\Kraken.Tests.NUnit.csproj">
+      <Project>{8d280e0a-6c63-4531-b6b7-9e551afa2d32}</Project>
+      <Name>Kraken.Tests.NUnit</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Kraken.Tests\Kraken.Tests.csproj">
+      <Project>{6d70c8c8-2dfc-4b13-99aa-aff46494ecb9}</Project>
+      <Name>Kraken.Tests</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Kraken.Core.Tests\Kraken.Core.Tests.csproj">
+      <Project>{0a23a7a3-a368-4758-be43-053d403f68d1}</Project>
+      <Name>Kraken.Core.Tests</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Kraken.Core\Kraken.Core.csproj">
-      <Project>{d0365619-0c1b-4aed-875b-1882e504fef9}</Project>
-      <Name>Kraken.Core</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
