--- a/source/_Tests/Kraken.Core.Windows.Tests/Kraken.Core.Windows.Tests.csproj
+++ b/source/_Tests/Kraken.Core.Windows.Tests/Kraken.Core.Windows.Tests.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,8 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Web\WcfLogicFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Threading\TryWithTimeoutFixture.cs" />
+    <Compile Include="Core\Threading\TryWithTimeoutFixture.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Kraken.Core.Windows\Kraken.Core.Windows.csproj">
