--- a/source/_Tests/Kraken.Core.Tests/Kraken.Core.Tests.csproj
+++ b/source/_Tests/Kraken.Core.Tests/Kraken.Core.Tests.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Core\Extensions\StringExtensions.cs" />
     <Compile Include="Core\Extensions\StringExtensionsFixture.cs" />
     <Compile Include="Core\Extensions\TimeSpanExtensionsFixture.cs" />
+    <Compile Include="Core\GuardFixture.cs" />
     <Compile Include="Core\Instrumentation\PerformanceMonitorFixture.cs" />
     <Compile Include="Core\IO\FileArchiverFixture.cs" />
     <Compile Include="Core\IO\KrakenPathFixture.cs" />
