--- a/source/Kraken.Core/Kraken.Core.nuspec
+++ b/source/Kraken.Core/Kraken.Core.nuspec
@@ -8,6 +8,9 @@
         <authors>neutmute</authors>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <projectUrl>https://github.com/neutmute/kraken.utilities</projectUrl>
-		
+        <iconUrl>https://raw.githubusercontent.com/neutmute/kraken.utilities/assets/kraken.png</iconUrl>
 	</metadata>
+    <files>
+        <file src="bin\$configuration$\$id$.pdb" target="lib\net40\" />
+    </files>
 </package>
