--- a/source/Kraken.Core.Windows/packages.config
+++ b/source/Kraken.Core.Windows/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Common.Logging" version="3.3.1" targetFramework="net40" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net40" />
+  <package id="Kraken.Core" version="4.5.0.108" targetFramework="net40" />
 </packages>
