--- a/source/_Tests/Kraken.Core.Tests/packages.config
+++ b/source/_Tests/Kraken.Core.Tests/packages.config
@@ -3,7 +3,7 @@
   <package id="Autofac" version="3.3.0" targetFramework="net40" />
   <package id="Common.Logging" version="3.3.1" targetFramework="net40" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net40" />
-  <package id="NUnit" version="3.6.0" targetFramework="net40" />
+  <package id="NUnit" version="3.6.0" targetFramework="net40" requireReinstallation="true" />
   <package id="NUnit.ConsoleRunner" version="3.6.0" targetFramework="net40" />
   <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net40" />
   <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net40" />
