--- a/source/Kraken.Tests.NUnit/Kraken.Tests.NUnit.csproj
+++ b/source/Kraken.Tests.NUnit/Kraken.Tests.NUnit.csproj
@@ -7,16 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Autofac" Version="4.6.1" />
     <PackageReference Include="Common.Logging" Version="3.4.1" />
     <PackageReference Include="NUnit" Version="3.8.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Kraken.Tests\Kraken.Tests.csproj" />
   </ItemGroup>
 
 </Project>
