--- a/source/_Tests/Kraken.Core.Tests/Kraken.Core.Tests.csproj
+++ b/source/_Tests/Kraken.Core.Tests/Kraken.Core.Tests.csproj
@@ -12,6 +12,9 @@
 
   <ItemGroup>
     <PackageReference Include="Common.Logging" Version="3.4.1" />
+    <PackageReference Include="NUnit" Version="3.8.1" />
+    
+    
   </ItemGroup>
 
   <ItemGroup>
